[Roger]:edit index adjust

--- a/original/views/index.pug
+++ b/original/views/index.pug
@@ -8,6 +8,7 @@ html(lang="zh-Hant-TW")
         link(rel="stylesheet" href="styles/reset.css")
         link(rel="stylesheet" href="styles/custom.css")
         link(rel="stylesheet" href="styles/includes/header.css")
+        link(rel="stylesheet" href="styles/includes/footer.css")
         title Erduo Index page
         
     body
