--- a/includes/header.html
+++ b/includes/header.html
@@ -1,14 +1,14 @@
 
-<div class="header">
+<div class="header relative">
   <div class="container flex f-V-B">
     <div class="logo">
-      <div class="img" style="background-image: url('images/logo-white.png')"></div>
+      <div class="img" style="background-image: url('images/logo-white.svg')"></div>
     </div>
-    <ul class="menu">
-      <li><a href="#index">首頁</a></li>
-      <li><a href="#services">服務</a></li>
-      <li><a href="#works">作品</a></li>
-      <li><a href="#contact">聯絡我們</a></li>
+    <ul class="menu flex f-R">
+      <li><a class="t-C inline-block relative" href="#index">首頁<span class="inline-block absolute">Home</span></a></li>
+      <li><a class="t-C inline-block relative" href="#service">服務<span class="inline-block absolute">Service</span></a></li>
+      <li><a class="t-C inline-block relative" href="#works">作品<span class="inline-block absolute">Works</span></a></li>
+      <li><a class="t-C inline-block relative" href="#contact">聯絡我們<span class="inline-block absolute">Contact</span></a></li>
     </ul>
   </div>
 </div>
