--- a/original/styles/header.sass
+++ b/original/styles/header.sass
@@ -4,4 +4,48 @@
 @import mixins/_font
 
 .header
-    
+    padding: 15px 0
+    top: 40px
+    background: gray
+
+    .logo
+        width: 9.86%
+
+        .img
+            width: 100%
+            padding-bottom: 35.2%
+            background-size: cover
+            background-repeat: no-repeat
+            background-position: center
+
+    .menu
+        li
+            margin-right: 92px
+
+            &:last-child
+                margin-right: 0
+
+            a
+                width: 100%
+                height: 100%
+                
+                +subHeader
+                +default-white-color
+
+                span
+                    top: 50%
+                    left: 50%
+                    transform: translateX(-50%)
+                    opacity: 1
+                    transition: .5s ease
+                    pointer-events: none
+
+                    +subHeader
+                    +disabled-white-color
+
+                    font-weight: 300
+
+                &:hover
+                    span
+                        top: 25%
+                        opacity: 0
