--- a/original/styles/mixins/_font.sass
+++ b/original/styles/mixins/_font.sass
@@ -1,20 +1,138 @@
+
+// --------------------------------
+// ---------- font family ---------
+// --------------------------------
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 100
+  src: url(font/GenRyuMin-B.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 200
+  src: url(font/GenRyuMin-EL.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 300
+  src: url(font/GenRyuMin-H.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 400
+  src: url(font/GenRyuMin-L.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 500
+  src: url(font/GenRyuMin-M.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 600
+  src: url(font/GenRyuMin-R.ttc)
+
+@font-face
+  font-family: GenRyuMin
+  font-weight: 700
+  src: url(font/GenRyuMin-SB.ttc)
+
+
+
+@font-face
+  font-family: GenWanMin
+  font-weight: 200
+  src: url(font/GenWanMin-EL.ttc)
+
+@font-face
+  font-family: GenWanMin
+  font-weight: 300
+  src: url(font/GenWanMin-L.ttc)
+
+@font-face
+  font-family: GenWanMin
+  font-weight: 400
+  src: url(font/GenWanMin-M.ttc)
+
+@font-face
+  font-family: GenWanMin
+  font-weight: 500
+  src: url(font/GenWanMin-R.ttc)
+
+@font-face
+  font-family: GenWanMin
+  font-weight: 600
+  src: url(font/GenWanMin-SB.ttc)
+
+
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 100
+  src: url(font/GenYoMin-B.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 200
+  src: url(font/GenYoMin-EL.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 300
+  src: url(font/GenYoMin-H.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 400
+  src: url(font/GenYoMin-L.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 500
+  src: url(font/GenYoMin-M.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 600
+  src: url(font/GenYoMin-R.ttc)
+
+@font-face
+  font-family: GenYoMin
+  font-weight: 700
+  src: url(font/GenYoMin-SB.ttc)
+
+
 // --------------------------------
 // ---------- font color ----------
 // --------------------------------
 
 @mixin default-color
     color: rgba(black, 0.8)
+
+@mixin default-white-color
+    color: rgba(white, 0.8)
     
 @mixin secondary-color
     color: rgba(black, 0.55)
+
+@mixin secondary-white-color
+    color: rgba(white, 0.55)
     
 @mixin disabled-color
     color: rgba(black, 0.3)
+
+@mixin disabled-white-color
+    color: rgba(white, 0.3)
     
 @mixin accent-color
     color: rgba(#c69a6c, 0.8)
 
-//font size & font weight
+
+//---------------------------------
+//---- font size & font weight ----
+//---------------------------------
+
 @mixin display($font-weight: 500, $line-height: 56px, $font-size: 56px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
@@ -51,13 +169,13 @@
     letter-spacing: $font-spacing
     line-height: $line-height
     
-@mixin SubHeader($font-weight: 500, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
+@mixin subHeader($font-weight: 500, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
     
-@mixin SubHeader2($font-weight: bold, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
+@mixin subHeader2($font-weight: bold, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
