--- a/original/views/index.pug
+++ b/original/views/index.pug
@@ -7,8 +7,8 @@ html(lang="zh-Hant-TW")
         
         link(rel="stylesheet" href="styles/reset.css")
         link(rel="stylesheet" href="styles/custom.css")
-        link(rel="stylesheet" href="styles/includes/header.css")
-        link(rel="stylesheet" href="styles/includes/footer.css")
+        link(rel="stylesheet" href="styles/header.css")
+        link(rel="stylesheet" href="styles/footer.css")
         title Erduo Index page
         
     body
