[Roger]:edit index adjust

--- a/includes/header.html
+++ b/includes/header.html
@@ -1,5 +1,5 @@
 
-<div class="header relative">
+<div class="header fixed">
   <div class="container flex f-V-B">
     <div class="logo">
       <div class="img" style="background-image: url('images/logo-white.svg')"></div>
