--- a/original/styles/custom.sass
+++ b/original/styles/custom.sass
@@ -14,3 +14,21 @@ body
 
     +breakpoint(zone-nb)
         max-width: calc(100% - 40px)
+
+    &.full-40
+        width: calc(100% - 40px)
+        max-width:calc(100%)
+
+
+// banner
+.banner
+    .banner-img
+        width: 100%
+        padding-bottom: 50.89%
+        background-size: cover
+        background-repeat: no-repeat
+        background-position: center
+
+        &:after
+            content: ''
+            position: absolute
