--- a/original/views/includes/header.pug
+++ b/original/views/includes/header.pug
@@ -1,4 +1,4 @@
-.header.relative
+.header.fixed
     .container.flex.f-V-B
         .logo
             .img(style="background-image: url('images/logo-white.svg')")
