--- a/original/views/index.pug
+++ b/original/views/index.pug
@@ -13,5 +13,7 @@ html(lang="zh-Hant-TW")
         
     body
         include includes/header.pug
+
+        include includes/module/banner.pug
         
         include includes/footer.pug
