--- a/original/styles/header.sass
+++ b/original/styles/header.sass
@@ -5,11 +5,16 @@
 
 .header
     padding: 15px 0
+    width: 100%
     top: 40px
-    background: gray
+    z-index: 1
+
+    .container
+        +breakpoint(zone-nb)
+            max-width: calc(100% - 80px)
 
     .logo
-        width: 9.86%
+        width: 11.09%
 
         .img
             width: 100%
@@ -33,8 +38,9 @@
                 +default-white-color
 
                 span
-                    top: 50%
+                    top: 24px
                     left: 50%
+                    height: 22px
                     transform: translateX(-50%)
                     opacity: 1
                     transition: .5s ease
@@ -43,9 +49,7 @@
                     +subHeader
                     +disabled-white-color
 
-                    font-weight: 300
-
                 &:hover
                     span
-                        top: 25%
+                        top: 20px
                         opacity: 0
