--- a/original/styles/mixins/_universal.sass
+++ b/original/styles/mixins/_universal.sass
@@ -21,6 +21,12 @@ a
 .p-L-10
     padding-left: 10px
 
+.p-T-10
+    padding-top: 10px
+
+.p-B-10
+    padding-bottom: 10px
+
 .p-20
     padding: 20px
 
@@ -30,14 +36,26 @@ a
 .p-L-20
     padding-left: 20px
 
-.p-20
-    padding: 20px
+.p-T-10
+    padding-top: 10px
+
+.p-B-10
+    padding-bottom: 10px
+
+.p-30
+    padding: 30px
 
 .p-R-30
     padding-right: 30px
 
 .p-L-30
     padding-left: 30px
+
+.p-T-20
+    padding-top: 20px
+
+.p-B-20
+    padding-bottom: 20px
 
 .p-40
     padding: 40px
@@ -48,6 +66,12 @@ a
 .p-L-40
     padding-left: 40px
 
+.p-T-40
+    padding-top: 40px
+
+.p-B-40
+    padding-bottom: 40px
+
 .p-60
     padding: 60px
 
@@ -56,6 +80,12 @@ a
 
 .p-L-60
     padding-left: 60px
+
+.p-T-60
+    padding-top: 60px
+
+.p-B-60
+    padding-bottom: 60px
 
 .p-80
     padding: 80px
@@ -66,6 +96,12 @@ a
 .p-L-80
     padding-left: 80px
 
+.p-T-80
+    padding-top: 80px
+
+.p-B-80
+    padding-bottom: 80px
+
 .p-100
     padding: 100px
 
@@ -74,6 +110,12 @@ a
 
 .p-L-100
     padding-left: 100px
+
+.p-T-100
+    padding-top: 100px
+
+.p-B-100
+    padding-bottom: 100px
 
 .m-0
     margin: 0
@@ -87,6 +129,12 @@ a
 .m-L-10
     margin-left: 10px
 
+.m-T-10
+    margin-top: 10px
+
+.m-B-10
+    margin-bottom: 10px
+
 .m-20
     margin: 20px
 
@@ -96,14 +144,26 @@ a
 .m-L-20
     margin-left: 20px
 
-.m-20
-    margin: 20px
+.m-T-20
+    margin-top: 20px
+
+.m-B-20
+    margin-bottom: 20px
+
+.m-30
+    margin: 30px
 
 .m-R-30
     margin-right: 30px
 
 .m-L-30
     margin-left: 30px
+
+.m-T-30
+    margin-top: 30px
+
+.m-B-30
+    margin-bottom: 30px
 
 .m-40
     margin: 40px
@@ -114,6 +174,12 @@ a
 .m-L-40
     margin-left: 40px
 
+.m-T-40
+    margin-top: 40px
+
+.m-B-40
+    margin-bottom: 40px
+
 .m-60
     margin: 60px
 
@@ -122,6 +188,12 @@ a
 
 .m-L-60
     margin-left: 60px
+
+.m-T-60
+    margin-top: 60px
+
+.m-B-60
+    margin-bottom: 60px
 
 .m-80
     margin: 80px
@@ -132,6 +204,12 @@ a
 .m-L-80
     margin-left: 80px
 
+.m-T-80
+    margin-top: 80px
+
+.m-B-80
+    margin-bottom: 80px
+
 .m-100
     margin: 100px
 
@@ -140,6 +218,12 @@ a
 
 .m-L-100
     margin-left: 100px
+
+.m-T-100
+    margin-top: 100px
+
+.m-B-100
+    margin-bottom: 100px
 
 
 // ------------- display -------------
