--- a/original/styles/mixins/_font.sass
+++ b/original/styles/mixins/_font.sass
@@ -6,101 +6,101 @@
 @font-face
   font-family: GenRyuMin
   font-weight: 100
-  src: url(font/GenRyuMin-B.ttc)
+  src: url(../font/GenRyuMin-B.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 200
-  src: url(font/GenRyuMin-EL.ttc)
+  src: url(../font/GenRyuMin-EL.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 300
-  src: url(font/GenRyuMin-H.ttc)
+  src: url(../font/GenRyuMin-H.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 400
-  src: url(font/GenRyuMin-L.ttc)
+  src: url(../font/GenRyuMin-L.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 500
-  src: url(font/GenRyuMin-M.ttc)
+  src: url(../font/GenRyuMin-M.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 600
-  src: url(font/GenRyuMin-R.ttc)
+  src: url(../font/GenRyuMin-R.ttc)
 
 @font-face
   font-family: GenRyuMin
   font-weight: 700
-  src: url(font/GenRyuMin-SB.ttc)
+  src: url(../font/GenRyuMin-SB.ttc)
 
 
 
 @font-face
   font-family: GenWanMin
   font-weight: 200
-  src: url(font/GenWanMin-EL.ttc)
+  src: url(../font/GenWanMin-EL.ttc)
 
 @font-face
   font-family: GenWanMin
   font-weight: 300
-  src: url(font/GenWanMin-L.ttc)
+  src: url(../font/GenWanMin-L.ttc)
 
 @font-face
   font-family: GenWanMin
   font-weight: 400
-  src: url(font/GenWanMin-M.ttc)
+  src: url(../font/GenWanMin-M.ttc)
 
 @font-face
   font-family: GenWanMin
   font-weight: 500
-  src: url(font/GenWanMin-R.ttc)
+  src: url(../font/GenWanMin-R.ttc)
 
 @font-face
   font-family: GenWanMin
   font-weight: 600
-  src: url(font/GenWanMin-SB.ttc)
+  src: url(../font/GenWanMin-SB.ttc)
 
 
 
 @font-face
   font-family: GenYoMin
   font-weight: 100
-  src: url(font/GenYoMin-B.ttc)
+  src: url(../font/GenYoMin-B.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 200
-  src: url(font/GenYoMin-EL.ttc)
+  src: url(../font/GenYoMin-EL.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 300
-  src: url(font/GenYoMin-H.ttc)
+  src: url(../font/GenYoMin-H.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 400
-  src: url(font/GenYoMin-L.ttc)
+  src: url(../font/GenYoMin-L.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 500
-  src: url(font/GenYoMin-M.ttc)
+  src: url(../font/GenYoMin-M.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 600
-  src: url(font/GenYoMin-R.ttc)
+  src: url(../font/GenYoMin-R.ttc)
 
 @font-face
   font-family: GenYoMin
   font-weight: 700
-  src: url(font/GenYoMin-SB.ttc)
+  src: url(../font/GenYoMin-SB.ttc)
 
 
 // --------------------------------
