--- a/original/views/includes/script.pug
+++ b/original/views/includes/script.pug
@@ -3,5 +3,14 @@ script(src="script/jquery/jquery-3.6.0.js")
 
 script.
     $(document).ready(function () {
-        
+
+        $(window).scroll(function() {
+            var ww = $(window).scrollTop();
+
+            if (ww > 100) {
+                $('.header').addClass('fix');
+            } else {
+                $('.header').removeClass('fix');
+            }
+        });
     });
