--- a/original/views/index.pug
+++ b/original/views/index.pug
@@ -15,5 +15,8 @@ html(lang="zh-Hant-TW")
         include includes/header.pug
 
         include includes/module/banner.pug
+        include includes/module/service.pug
+        include includes/module/feature.pug
+        include includes/module/works.pug
         
         include includes/footer.pug
