--- a/includes/module/banner.html
+++ b/includes/module/banner.html
@@ -1,6 +1,7 @@
 
 <div class="banner p-T-20">
   <div class="container full-40">
-    <div class="banner-img relative" style="background-image: url('images/banner-01.jpg')"></div>
+    <div class="banner-img relative" style="background-image: url('images/banner-01.jpg')"></div><a class="btn-scroll-down" href="#content">
+      <div class="img" style="background-image: url('images/icons/icon-mouse.png')"></div><span>Scroll down</span></a>
   </div>
 </div>
