--- a/original/views/includes/footer.pug
+++ b/original/views/includes/footer.pug
@@ -1,4 +1,13 @@
 .footer
-    .container.flex.f-V-B
+    .container
         .logo
             .img(style="background-image: url('images/logo-golden.svg')")
+
+        .contact
+            .title.m-B-30 Contact Us
+            ul.info-box
+                li.m-B-10 Tel:
+                    span +886 988519746
+                li E-mail:
+                    span wayne19921106@gmail.com
+                
