--- a/original/styles/custom.sass
+++ b/original/styles/custom.sass
@@ -102,6 +102,21 @@ body
         margin-left: 80px
         width: calc(100% - 80px)
 
+        &:after
+            content: ''
+            position: absolute
+            bottom: -250px
+            left: calc(50% - 33px)
+            width: 100vw
+            height: 713px
+            background-image: url(../images/wave-02.png)
+            background-repeat: no-repeat
+            background-size: contain
+            background-position: left
+            transform: translateX(-50%)
+            z-index: -1
+            pointer-events: none
+
     .service-card
         margin-left: 95px
         position: relative
@@ -130,7 +145,7 @@ body
         background: $darkGold
 
         span
-            +headline2($font-size: 36px)
+            +display2
             +default-white-color
 
             small
@@ -183,3 +198,90 @@ body
 
                 +body
                 +default-color
+
+
+// feature
+.feature
+    .feature-card
+        padding: 60px 0
+        position: relative
+
+        &:after
+            content: ''
+            position: absolute
+            left: -20px
+            top: 0
+            width: calc(50% + 50vw - 50px)
+            height: 100%
+            background-image: url(../images/feature-01.jpg)
+            background-size: cover
+            background-repeat: no-repeat
+            border-radius: 0px 0px 30px 0px
+            z-index: -1
+
+        .title
+            +display2
+            +default-white-color
+
+        .intro
+            +body
+            +default-white-color
+
+        ul
+            display: flex
+            flex-wrap: wrap
+            justify-content: center
+            align-items: center
+
+            li
+                margin-right: 40px
+                padding: 70px 24px
+                width: calc(25% - (40px*3/4))
+                background: rgba(black, 0.3)
+                border: 1px solid rgba(white, 0.5)
+                box-sizing: border-box
+
+                &:last-child
+                    margin-right: 0
+
+                .content
+                    +title2
+                    +default-white-color
+
+                .des
+                    +body
+                    +secondary-white-color
+                    
+
+// works
+.works
+    .works-card
+        position: relative
+        
+    .title-box
+        padding: 25px 40px
+        display: inline-flex
+        flex-wrap: wrap
+
+        span
+            +display2
+            +default-color
+
+            small
+                position: relative
+                bottom: -2px
+
+                +title2
+                +secondary-color
+
+                &:before
+                    content: '╱'
+                    padding: 0 10px
+                    position: relative
+                    bottom: 2px
+                    font-size: 20px
+    
+        .function-box
+            position: relative
+            right: 0px
+            top: 0px
