[Roger]:edit gitignore edit

--- a/styles/footer.sass
+++ b/styles/footer.sass
@@ -44,7 +44,7 @@
             position: absolute
             height: 100%
             width: 60%
-            right: calc((-100vw + 100%)*0.5)
+            right: -40px
             bottom: 0
             background-image: url(../images/wave-03.png)
             background-repeat: no-repeat
