--- a/original/sass/mixins/_font.sass
+++ b/original/sass/mixins/_font.sass
@@ -138,81 +138,123 @@
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin display2($font-weight: bold, $line-height: 56px, $font-size: 36px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin headline($font-weight: 500, $line-height: 40px, $font-size: 30px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin headline2($font-weight: bold, $line-height: 40px, $font-size: 30px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin title($font-weight: 500, $line-height: 32px, $font-size: 27px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin title2($font-weight: bold, $line-height: 32px, $font-size: 27px, $font-spacing: 1.6px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.5
     
 @mixin subHeader($font-weight: 500, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.6
     
 @mixin subHeader2($font-weight: bold, $line-height: 28px, $font-size: 23px, $font-spacing: 1.36px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.6
     
 @mixin body($font-weight: 500, $line-height: 25px, $font-size: 20px, $font-spacing: 1.25px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.7
     
 @mixin body2($font-weight: bold, $line-height: 25px, $font-size: 20px, $font-spacing: 1.25px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.7
     
 @mixin caption($font-weight: 500, $line-height: 21px, $font-size: 17px, $font-spacing: 1.16px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.8
     
 @mixin caption2($font-weight: bold, $line-height: 21px, $font-size: 17px, $font-spacing: 1.16px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.8
     
 @mixin small($font-weight: 500, $line-height: 19px, $font-size: 15px, $font-spacing: 1px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.7
     
 @mixin small2($font-weight: bold, $line-height: 19px, $font-size: 15px, $font-spacing: 1px)
     font-weight: $font-weight
     font-size: $font-size
     letter-spacing: $font-spacing
     line-height: $line-height
+
+    +breakpoint(pad-portrait)
+      font-size: $font-size*0.7
