--- a/original/sass/footer.sass
+++ b/original/sass/footer.sass
@@ -4,86 +4,92 @@
 @import mixins/_font
 
 .footer
-    margin-bottom: 70px
-    position: relative
-    width: 100%
-    top: 40px
-    z-index: 999
-    transition: .5s ease
+	margin-bottom: 70px
+	position: relative
+	width: 100%
+	top: 40px
+	z-index: 999
+	transition: .5s ease
 
-    &:after
-        content: ''
-        position: absolute
-        top: 100%
-        left: 50%
-        width: calc(100vw - 15px)
-        height: 70px
-        background: #c2ab93
-        transform: translateX(-50%)
+	&:after
+		content: ''
+		position: absolute
+		top: 100%
+		left: 50%
+		width: calc(100vw - 15px)
+		height: 70px
+		background: #c2ab93
+		transform: translateX(-50%)
 
-    &:before
-        content: ''
-        position: absolute
-        top: 0
-        right: calc((100vw - 100% - 40px) * -0.5 + 60px)
-        width: 100vw
-        height: 100%
-        background: rgba(white, 0.6)
-        border-radius: 0 30px 0 0
-        z-index: -1
+		+breakpoint(pad-portrait)
+			width: 100vw
 
-    .container
-        padding: 65px 0px
-        position: relative
+	&:before
+		content: ''
+		position: absolute
+		top: 0
+		right: calc((100vw - 100% - 40px) * -0.5 + 60px)
+		width: 100vw
+		height: 100%
+		background: rgba(white, 0.6)
+		border-radius: 0 30px 0 0
+		z-index: -1
 
-        +breakpoint(zone-nb)
-            max-width: calc(100% - 80px)
+	.container
+		padding: 65px 0px
+		position: relative
 
-        &:after
-            content: ''
-            position: absolute
-            height: 100%
-            width: 60%
-            right: -40px
-            bottom: 0
-            background-image: url(../images/wave-03.png)
-            background-repeat: no-repeat
-            background-size: contain
-            background-position: bottom right
+		+breakpoint(zone-nb)
+			max-width: calc(100% - 80px)
 
-        &:before
-            content: ''
-            position: absolute
-            height: calc(60vw * 0.313)
-            width: 60vw
-            right: 0
-            bottom: -45px
-            background-image: url(../images/footer-text-01.png)
-            background-repeat: no-repeat
-            background-size: cover
-            background-position: center
-            z-index: 1
+		&:after
+			content: ''
+			position: absolute
+			height: 100%
+			width: 60%
+			right: -40px
+			bottom: 0
+			background-image: url(../images/wave-03.png)
+			background-repeat: no-repeat
+			background-size: contain
+			background-position: bottom right
 
-    .logo
-        margin-bottom: 215px
-        width: 11.09%
+		&:before
+			content: ''
+			position: absolute
+			height: calc(60vw * 0.313)
+			width: 60vw
+			right: 0
+			bottom: -45px
+			background-image: url(../images/footer-text-01.png)
+			background-repeat: no-repeat
+			background-size: cover
+			background-position: center
+			z-index: 1
 
-        .img
-            width: 100%
-            padding-bottom: 35.2%
-            background-size: cover
-            background-repeat: no-repeat
-            background-position: center
+	.logo
+		margin-bottom: 215px
+		width: 11.09%
 
-    .contact
-        .title
+		.img
+			width: 100%
+			padding-bottom: 35.2%
+			background-size: cover
+			background-repeat: no-repeat
+			background-position: center
 
-            +caption2
-            +accent-color
+		+breakpoint(pad-portrait)
+			width: 38%
 
-        li
+	.contact
+		.title
 
-            +caption
-            +disabled-color
-            
-            
+			+caption2
+			+accent-color
+
+		li
+
+			+caption
+			+disabled-color
+			
+			
