--- a/original/sass/header.sass
+++ b/original/sass/header.sass
@@ -39,6 +39,7 @@
 
     .logo
         width: 11.09%
+        min-width: 80px
 
         .img
             width: 100%
@@ -48,8 +49,14 @@
             background-position: center
 
     .menu
+        +breakpoint(pad-portrait)
+            display: none
+
         li
             margin-right: 92px
+
+            +breakpoint(pad-portrait)
+                margin-right: 25px
 
             &:last-child
                 margin-right: 0
@@ -60,6 +67,9 @@
                 
                 +subHeader
                 +default-white-color
+
+                +breakpoint(pad-portrait)
+                    font-size: 16px
 
                 span
                     top: 24px
@@ -73,7 +83,76 @@
                     +subHeader
                     +disabled-white-color
 
+                    +breakpoint(pad-portrait)
+                        display: none
+
                 &:hover
                     span
                         top: 20px
                         opacity: 0
+
+    .burger
+        display: none
+        position: relative
+        cursor: pointer
+        
+        +breakpoint(pad-portrait)
+            display: block
+
+        > span
+            display: inline-block
+            position: relative
+            width: 25px
+            height: 2px
+            background-color: white
+            transition: .3s ease
+
+            &:after,
+            &:before
+                content: ''
+                position: absolute
+                top: 8px
+                width: 100%
+                height: 2px
+                background-color: white
+                transition: .3s ease
+                transform: rotate(0deg)
+
+            &:before
+                top: auto
+                bottom: 8px
+
+            &.open
+                background: transparent
+
+                &:after
+                    transform: rotate(-45deg)
+                    top: 0
+
+                &:before
+                    transform: rotate(45deg)
+                    bottom: 0
+        
+        > ul
+            display: none
+            position: absolute
+            top: 100%
+            right: 0
+            background: rgba(white, 0.7)
+
+            li
+                white-space: nowrap
+
+                a
+                    padding: 15px 20px
+                    width: 100%
+                    min-width: 150px
+                    color: black
+                    text-align: left
+                    background-color: transparent
+                    transition: .3s ease
+
+                    &:hover
+                        background-color: #fff
+
+
